# client-ontologies

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: validate.yml
clients/femme-events/: client.yaml  ontology.yaml
clients/femme-events/modules/: brand.yaml  local-visibility.yaml  operations.yaml  website.yaml
clients/femme-events/projections/: agent-context.yaml  local-seo.yaml  website-build.yaml
clients/jmd-menswear/: client.yaml  ontology.yaml
clients/jmd-menswear/modules/: brand.yaml  inventory-images.yaml  operations.yaml  website.yaml
clients/jmd-menswear/projections/: agent-context.yaml  inventory-workflow.yaml  website-build.yaml
docs/: conventions.md  coverage.md  examples.md  roadmap.md  spec.md
docs/research/: initial-ontology-design.md
schemas/: client.schema.json  defs.schema.json  evidence.schema.json  manifest.schema.json  module.schema.json  ontology.schema.json  projection.schema.json  rule.schema.json
scripts/: check_evidence.py  check_rules.py  export_sqlite.py  ontology_cli.py  ontology_loader.py  ontology_service.py  validate_ontology.py
tests/: installed_smoke.py  run_checks.py  run_cli.py  run_competency.py  run_evidence.py  run_export.py  run_fixtures.py  run_predicates.py
tests/competency/: questions.yaml
tests/fixtures/bad-content-hash/clients/demo/modules/: broken.yaml
tests/fixtures/bad-enum/clients/demo/modules/: broken.yaml
tests/fixtures/bad-predicate/clients/demo/modules/: broken.yaml
tests/fixtures/dangling-relationship/clients/demo/modules/: broken.yaml
tests/fixtures/duplicate-id/clients/demo/modules/: broken.yaml
tests/fixtures/invalid-constrained-object/clients/demo/modules/: broken.yaml
tests/fixtures/invalid-constrained-subject/clients/demo/modules/: broken.yaml
tests/fixtures/invalid-experimental-predicate/clients/demo/modules/: broken.yaml
tests/fixtures/malformed-manifest-path/clients/demo/: ontology.yaml
tests/fixtures/unknown-field/clients/demo/: client.yaml
tests/fixtures/unknown-kind/clients/demo/: client.yaml
tests/fixtures/valid/clients/demo/: client.yaml  ontology.yaml
tests/fixtures/valid/clients/demo/modules/: core.yaml
(+11 files in other folders)
